[gd_scene load_steps=2 format=3 uid="uid://bpja34bbtxgig"]

[ext_resource type="Script" path="res://Fuseki/Dump/FusekiDumper.gd" id="1_wsn3w"]

[node name="DumpUIContainer" type="HBoxContainer"]
custom_minimum_size = Vector2(400, 78)
offset_right = 210.0
offset_bottom = 66.0
script = ExtResource("1_wsn3w")

[node name="DumpPathEdit" type="TextEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Dump file path"

[node name="PickButton" type="Button" parent="."]
layout_mode = 2
text = "PIck file"

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DumpButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Dump"

[node name="LoadButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Load
"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 500)
always_on_top = true
popup_window = true
min_size = Vector2i(600, 500)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2

[connection signal="focus_entered" from="DumpPathEdit" to="." method="_on_dump_path_edit_focus_entered"]
[connection signal="focus_exited" from="DumpPathEdit" to="." method="_on_dump_path_edit_focus_exited"]
[connection signal="pressed" from="PickButton" to="." method="_on_pick_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/DumpButton" to="." method="_on_dump_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
